argo-rollout-gtw/rollout-gtw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rollouts-gtw
  namespace: argo-rollouts
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: rollouts-selfsigned-cert-tls # secret which holds the certificate
